# Discord-Status

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh
src/: main.rs
