[package]
name = "discord_status"
version = "2.1.2"
edition = "2021"


# Enable rt-multi-thread feature to use multi-threaded runtime
[dependencies.tokio]
version = "1"
features = ["macros", "full"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
default-features = false
features = ["model", "client", "gateway", "rustls_backend"]
version = "0.12"
